# kakikae

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
crates/athook/: Cargo.toml
crates/athook-macros/: Cargo.toml
crates/athook-macros/src/: lib.rs
crates/athook/src/: lib.rs  macros.rs  raw.rs  utils.rs
crates/kakikae-cli/: Cargo.toml  README.md
crates/kakikae-cli/src/: error.rs  kamakiri2.rs  main.rs  utils.rs
crates/kakikae-s0/: Cargo.toml  link.x
crates/kakikae-s0/.cargo/: config.toml
crates/kakikae-s0/src/: main.rs  start.S
crates/kakikae-s0/src/brom/: ffi.rs  mod.rs
crates/kakikae-s1/: Cargo.toml  link.x
crates/kakikae-s1/.cargo/: config.toml
crates/kakikae-s1/src/: main.rs  start.S
crates/kakikae-s1/src/brom/: ffi.rs
crates/kakikae-s1/src/preloader/: ffi.rs  log.rs  mod.rs
crates/kakikae-s2/: Cargo.toml  link.x
crates/kakikae-s2/.cargo/: config.toml
crates/kakikae-s2/src/: log.rs  main.rs  start.S
crates/kakikae-s2/src/hooks/: boot_menu.rs  display.rs  mod.rs  utils.rs
crates/kakikae-shared/: Cargo.toml
crates/kakikae-shared/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/stage1/: Cargo.toml  rust-toolchain.toml
crates/stage1/.cargo/: config.toml
crates/stage1/src/: hooks.rs  main.rs  start.S
crates/stage1/src/brom/: ffi.rs  mod.rs
crates/stage1/src/hooks/: mod.rs  raw.rs
crates/stage1/src/lk/: boot_menu.rs  display.rs  mod.rs  utils.rs
crates/stage1/src/preloader/: ffi.rs  mod.rs
crates/xtask/: Cargo.toml
