[package]
name = "kakikae-s2"
authors = ["Sculas"]
version = "0.0.0"
edition = "2024"
publish = false

# workaround for https://github.com/rust-lang/vscode-rust/issues/729
[[bin]]
name = "kakikae-s2"
test = false
bench = false
doctest = false

[profile.release]
panic = "abort"
opt-level = "z"
strip = true
lto = true

[dependencies]
heapless = "0.8"
athook = { path = "../athook" }
kakikae-shared = { path = "../kakikae-shared" }
